# groot-lang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  lexer.cpp  main.cpp  tokens.cpp
src/compiler/include/: lexer.hpp  tokens.hpp
src/engine/: CMakeLists.txt  engine.cpp
src/engine/include/: engine.hpp
tests/: test.g
