project(GrootLang::External)

set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_SHARED_LIBRARY OFF CACHE BOOL "" FORCE)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/glfw)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/glm)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/slang)

set(GROOT_GLFW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include)
set(GROOT_GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glm/include)
# set(GROOT_SLANG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/slang/include)

set(GROOT_GLFW_LIB ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/libglfw3.a)
# set(GROOT_SLANG_LIB ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/libslang.a)