set(GROOT_COMPILER_VERSION_MINOR 0)
set(GROOT_COMPILER_VERSION_PATCH 0)

project(GrootLang::Compiler
  VERSION "${GROOT_COMPILER_VERSION_MINOR}.${GROOT_COMPILER_VERSION_PATCH}"
  LANGUAGES CXX
)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(GROOT_COMPILER_INCLUDES
  ${CMAKE_CURRENT_SOURCE_DIR}/include/lexer.hpp
  ${CMAKE_CURRENT_SOURCE_DIR}/include/tokens.hpp
)

set(GROOT_COMPILER_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/lexer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/tokens.cpp
)

add_executable(groot ${GROOT_COMPILER_INCLUDES} ${GROOT_COMPILER_SOURCES})

target_include_directories(groot PRIVATE ${CMAKE_SOURCE_DIR})

target_link_libraries(groot groot.engine)